# libmagic-android-bindings

./: .gitignore  Dockerfile  LICENSE  README.md  README2  build.gradle  buildLibMagic.sh  local.properties  publish.sh  settings.gradle  updateLibMagic.sh  update_libmagic.sh
bindings/: build.gradle
bindings/src/main/cpp/: Bindings.c  CMakeLists.txt
bindings/src/main/java/ro/andob/libmagic/: FileX.kt  HashUtils.java  LibMagic.java  LibMagicDatabaseSetup.kt  LibMagicErrorHandler.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/assets/: sample.csv  sample.html  sample.json
sample/src/main/java/ro/andob/libmagic_binding/: SampleActivity.kt  SampleApplication.kt
